version 0.9.5 -- unreleased
    handler changes
	sys:
	 . Fixed typo breaking things for VServers.
    fixed automake 'make install' bug that failed if /etc/backup.d already
    existed

version 0.9.4 -- October 6th, 2006
    backupninja changes
	 . Fixed bug in toint(), and thus isnow(), which caused it
	   to not work when run from cron.
	 . Recursively ignore subdirs in /etc/backup.d (Closes: #361102)
	 . Add admingroup option to configuration to allow a group that can
	   read/write configurations (instead of only allowing root). Checks
	   and complains about group-readable files only when the group differs
	   from the one in the configuration file (default is root as before). 
	   Thanks to Martin Krafft for the patch (Closes: #370396).
	 . When determining which backup actions to make, find now follows
	   symlinks for $configdirectory
	 . Changed order of -s to mail for compatibility
	 . fixed permission stat call so it uses the --format supported by
	   coreutils (Closes: #382747)
	 . Added disk space report option (thanks Adam Kosmin)
    handler changes
	Added tar handler:
	 . create tarballs
	Added rsnap handler:
	 . rotated rsync snapshops
	 . code from paulv@bikkel.org
	Added rub handler: 
	 . alternative to rsnap
	 . code from rhatto@riseup.net
	mysql:
	 . Fixed improper use of $vuserhome (Closes: #351083)
	 . Fixed erroneous removal of tmpfile when it didn't exit
	 . Fixed inversed vsname emptiness check
	 . Fixed su quote usage to be more posixy
	 . Compress for sqldumps now happens in-line to save some disk space (Closes: #370778)
	 . Fixed --defaults-file now as --defaults-extra-file (thanks rhatto)
	pgsql:
	 . Fixed inversed vsname emptiness check
	 . Fixed su quote usage to be more posixy
	 . Fixed shell expansion, thanks Thomas Kotzian (Closes: #363297)
	 . postgres user UID is now the one from inside the vserver if necessary
	 . Compress now happens in-line to save some disk space (Closes: #370778)